--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -41,4 +41,13 @@
 
          @see https://www.w3.org/TR/SVG/paths.html#PathData -->
     <string translatable="false" name="config_mainBuiltInDisplayCutout">M -156,0 L -156,90 L 156,90 L 156,0 Z</string>
+    
+    <!-- List of biometric sensors on the device, in decreasing strength. Consumed by AuthService
+         when registering authenticators with BiometricService. Format must be ID:Modality:Strength,
+         where: IDs are unique per device, Modality as defined in BiometricAuthenticator.java,
+         and Strength as defined in Authenticators.java -->
+    <string-array name="config_biometric_sensors" translatable="false" >
+        <item>0:2:15</item> <!-- ID0:Fingerprint:Strong -->
+    </string-array>
+    
 </resources>
